--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 }
 
 :root {
-  --text-color:white ;
+  --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
-  --surface-color-hover: rgba(255, 255, 255, 0.02);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
   --switch-bg-url: url(./assets/moon-stars.svg);
 }
@@ -18,20 +18,13 @@
   --text-color: black;
   --bg-url: url(./assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
-   --surface-color: rgba(0, 0, 0, 0.05);
-   --surface-color-hover: rgba(0, 0, 0, 0.02);
-   --highlight-color: rgba(0, 0, 0, 0.1);
-   --switch-bg-url: url(./assets/Sun.svg);
+  --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(0, 0, 0, 0.1);
+  --switch-bg-url: url(./assets/sun.svg);
 }
 
 body {
-  /*
-  background-image: url(./assets/bg-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  */
-  /* background: color image  repeat position/size*/
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
 }
@@ -65,7 +58,6 @@ body * {
 }
 
 /* switch */
-
 #switch {
   position: relative;
   width: 64px;
@@ -85,11 +77,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -99,12 +96,11 @@ body * {
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   backdrop-filter: blur(4px);
- -webkit-backdrop-filter: blur(4px);
- border-radius: 9999px;
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 9999px;
 }
 
 /* links */
-
 ul {
   list-style: none;
 
@@ -132,13 +128,13 @@ ul li a {
   text-decoration: none;
   font-weight: 500;
 
-  transition: backgound 0.2s;
+  transition: background 0.2s;
 }
 
 /* pseudo-selector */
 ul li a:hover {
   background: var(--surface-color-hover);
-  border: 1.5px solid var(--text-color);;
+  border: 1.5px solid var(--text-color);
 }
 
 /* social links */
@@ -157,7 +153,7 @@ ul li a:hover {
   justify-content: center;
   padding: 16px;
 
-  transition: backgound 0.2s;
+  transition: background 0.2s;
   border-radius: 50%;
 }
 
@@ -171,12 +167,32 @@ footer {
   font-size: 14px;
 }
 
+/* media queries */
 @media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
 
   .light {
-     --bg-url: url(./assets/bg-desktop-light.jpg);
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
